force-app/main/default/objects/SPEN_RelatedProject__c/SPEN_RelatedProject__c.object-meta.xml
<CustomObject>
    <label>Related Project</label>
    <nameField>
        <displayFormat>PRJ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>