force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Projects</relationshipLabel>
    <relationshipName>Related_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>