force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_ContractReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractReferenceNumber__c</fullName>
    <description>CRMD-7633</description>
    <formula>SPEN_RelatedCase__r.SPEN_ContractReferenceNumberFormula__c</formula>
    <label>Contract Reference Number</label>
    <type>Text</type>
</CustomField>