force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_FinalEnergisationDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FinalEnergisationDate__c</fullName>
    <description>CRMD-7633</description>
    <formula>SPEN_RelatedCase__r.SPEN_FinalEnergisationDate__c</formula>
    <label>Final Energisation Date</label>
    <type>Date</type>
</CustomField>