force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_OtherRelatedProjectName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OtherRelatedProjectName__c</fullName>
    <formula>SPEN_Case__r.SPEN_ProjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Project Name</label>
    <type>Text</type>
</CustomField>