force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ProjectName__c</fullName>
    <description>CRMD-7633</description>
    <formula>SPEN_RelatedCase__r.SPEN_ProjectName__c</formula>
    <label>Related Project Name</label>
    <type>Text</type>
</CustomField>