force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Case.SPEN_ContractReferenceNumberFormula__c</field>
            <operation>equals</operation>
            <value>Wider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Projects (Related Case)</relationshipLabel>
    <relationshipName>Related_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>