force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_Relationship__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Relationship__c</fullName>
    <description>CRMD-7633</description>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interactive</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>