force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_Stage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
            <value>
                <fullName>Stage 5</fullName>
            </value>
            <value>
                <fullName>Enabling</fullName>
                <isActive>false</isActive>
                <label>Enabling</label>
            </value>
            <value>
                <fullName>Wider Works</fullName>
                <isActive>false</isActive>
                <label>Wider Works</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>