force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <description>CRMD-7633</description>
    <formula>TEXT(SPEN_RelatedCase__r.Status)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>