force-app/main/default/objects/SPEN_RelatedProject__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <description>CRMD-7633</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wider</fullName>
            </value>
            <value>
                <fullName>Enabling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>