force-app/main/default/objects/SPEN_RelatedProject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Case__c</columns>
    <columns>SPEN_RelatedCase__c</columns>
    <columns>SPEN_Stage__c</columns>
    <columns>SPEN_ProjectName__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_QueuePosition__c</columns>
    <columns>SPEN_Relationship__c</columns>
    <columns>SPEN_FinalEnergisationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Case__c</field>
        <operation>equals</operation>
        <value>00014251</value>
    </filters>
    <label>All</label>
</ListView>